--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "ethers": "^5.6.8",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-toastify": "^9.0.5"
